# uit-regulation-normalizer

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  pipeline.py  run_pipeline.py
src/config/: __init__.py  crawler.py  paths.py  regex_patterns.py  setting.yaml
src/crawler/: __init__.py  base_crawler.py  crawler_core.py  crawler_examples.py  crawler_factory.py  crawler_helper.py  daa_crawler.py  uit_crawler.py
src/processing/: __init__.py
src/processing/cleaner/: cleaner_core.py  cleaner_factory.py  uit_cleaner.py
src/processing/extractor/: xlsx_extractor.py
src/processing/parser/: __init__.py  base_extractor.py  docx_extractor.py  extractor_core.py  extractor_factory.py  pdf_extractor.py  structure_parser.py
src/processing/preprocess/: __init__.py  base_cleaner.py  cleaner_core.py  daa_cleaner.py  extract_digital.py  extract_scan.py  image_ops.py  page_schema.py  pdf_ocr_ingest.py  utils_text.py  writer.py
src/processing/preprocess/ocr/: __init__.py  base.py  factory.py  paddle_engine.py  tesseract_engine.py
src/utils/: detect_pdf_type.py  url_utils.py
