[project]
name = "uit-ai-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "crawl4ai>=0.7.4",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "llama-index>=0.14.4",
    "mcp>=1.16.0",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "openaiapi>=0.0.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
