[project]
name = "uit-regulation-normalizer"
version = "0.1.0"
description = "OCR + Parser pipeline for UIT regulations"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # --- OCR + PDF processing ---
    "pdfplumber>=0.11.4",
    "pdf2image>=1.17.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.10.0.84",
    "regex>=2024.5.15",
    "unidecode>=1.3.8",
    "tqdm>=4.67.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",

    # (optional) Layout model
    # "python-doctr>=0.8.1",

    # --- Backend / RAG ---
    "chromadb>=1.1.0",
    "crawl4ai>=0.7.4",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "llama-index>=0.14.4",
    "mcp>=1.16.0",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "openaiapi>=0.0.2",

    # --- Utils / Server ---
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "rich>=13.9.3"
]
